--- a/push_telegraph_playbook.yml
+++ b/push_telegraph_playbook.yml
@@ -8,7 +8,7 @@
     - name: Push RPM Telegraph Package on Arista
       ansible.builtin.copy:
         src: ./telegraf-1.2.0.i386.rpm
-        dest: /mnt/flash/telegraf-1.2.0.i386.rpm
+        dest: /mnt/flash/
         owner: root
         group: root
         mode: u+rwx
