--- a/push_telegraph_playbook.yml
+++ b/push_telegraph_playbook.yml
@@ -14,6 +14,6 @@
 
     - name: Push RPM Telegraph Package on Arista
       ansible.builtin.copy:
-        src: ./telegraf-1.2.0.i386-test.rpm
+        src: ./telegraf.rpm
         dest: /mnt/flash
         mode: 0644
