add collections requirements

--- a/push_telegraph_playbook.yml
+++ b/push_telegraph_playbook.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  connection: network_cli
+  ansible_connection: ansible.netcommon.network_cli
   gather_facts: false
   collections:
     - ansible.netcommon
