--- a/group_vars/veos.yml
+++ b/group_vars/veos.yml
@@ -1,3 +1,3 @@
 ---
-ansible_connection: ansible.netcommon.network_cli
-ansible_network_os: arista.eos.eos
+ansible_connection: network_cli
+ansible_network_os: eos
