add pip install scp in playbook

--- a/push_telegraph_playbook.yml
+++ b/push_telegraph_playbook.yml
@@ -8,6 +8,10 @@
 
   tasks:
 
+    - name: Install SCP python package
+      pip:
+        name: scp
+
     - name: Push RPM Telegraph Package on Arista
       ansible.netcommon.net_put:
         src: ./telegraf.rpm
