--- a/push_telegraph_playbook.yml
+++ b/push_telegraph_playbook.yml
@@ -27,3 +27,11 @@
         commands: 
         - bash sudo su 
         - /mnt/flash/installtelegraf.sh
+
+    - name: Add Telegraf Start at Reboot Event
+      arista.eos.eos_command:
+        commands: 
+        - event-handler telegraf 
+        - trigger on-boot   
+        - action bash /mnt/flash/./installtelegraf.sh
+      
