--- a/telegraf.conf
+++ b/telegraf.conf
@@ -12,37 +12,37 @@
   interval = "10s"
   ## Rounds collection interval to 'interval'
   ## ie, if interval="10s" then always collect on :00, :10, :20, etc.
-  round_interval = true
+  #round_interval = true
 
   ## Telegraf will send metrics to outputs in batches of at most
   ## metric_batch_size metrics.
   ## This controls the size of writes that Telegraf sends to output plugins.
-  metric_batch_size = 1000
+  #metric_batch_size = 1000
 
   ## Maximum number of unwritten metrics per output.  Increasing this value
   ## allows for longer periods of output downtime without dropping metrics at the
   ## cost of higher maximum memory usage.
-  metric_buffer_limit = 10000
+  #metric_buffer_limit = 10000
 
 # Gather metrics about network interfaces (no gnmi local agent)
-[[inputs.net]]
+#[[inputs.net]]
 
-# [[inputs.gnmi]]
-#   ## Address and port of the GNMI GRPC server
-#   addresses = ["10.0.137.100:6030"]
+[[inputs.gnmi]]
+  ## Address and port of the GNMI GRPC server
+  addresses = ["127.0.0.1:6030"]
 
-#   ## credentials
-#   username = "admin"
-#   password = "admin"
+  ## credentials
+  username = "admin"
+  password = "admin"
 
-#   ## redial in case of failures after
-#   redial = "10s"
+  ## redial in case of failures after
+  redial = "10s"
 
-#   [[inputs.gnmi.subscription]]
-#     name = "interface"
-#     subscription_mode = "sample"
-#     path = "/interfaces/interface/state/counters"
-#     sample_interval = "2s"
+  [[inputs.gnmi.subscription]]
+    name = "interface"
+    subscription_mode = "sample"
+    path = "/interfaces/interface/state/counters"
+    sample_interval = "2s"
 
 [[outputs.influxdb_v2]]
   urls = ["http://10.0.137.51:8086"]
@@ -53,7 +53,7 @@
 # [[outputs.file]]
 #   files = ["stdout"]
 
-# [[processors.rename]]
-#   [[processors.rename.replace]]
-#     tag="source"
-#     dest="device"
+[[processors.rename]]
+  [[processors.rename.replace]]
+    tag="source"
+    dest="device"
