change version telegraf for v1.22.0

--- a/push_telegraph_playbook.yml
+++ b/push_telegraph_playbook.yml
@@ -15,7 +15,7 @@
         - rm -f /mnt/flash/telegraf.rpm
       ignore_errors: yes
 
-    - name: Delete Telegraf Conf if existing
+    - name: Delete telegraf.con if existing
       arista.eos.eos_command:
         commands: 
         - bash sudo su 
