--- a/telegraf.conf
+++ b/telegraf.conf
@@ -9,7 +9,7 @@
 [agent]
   hostname = "veos"
   ## Default data collection interval for all inputs
-  interval = "10s"
+  interval = "2s"
   ## Rounds collection interval to 'interval'
   ## ie, if interval="10s" then always collect on :00, :10, :20, etc.
   #round_interval = true
@@ -55,5 +55,5 @@
 
 [[processors.rename]]
   [[processors.rename.replace]]
-    tag="source"
+    tag="hostname"
     dest="device"
