test eos_config module

--- a/push_telegraph_playbook.yml
+++ b/push_telegraph_playbook.yml
@@ -46,6 +46,18 @@
         - bash sudo su 
         - /mnt/flash/installtelegraf.sh
 
+    - name: load an acl into the device
+      arista.eos.eos_config:
+        lines:
+        - 10 permit ip host 192.0.2.1 any log
+        - 20 permit ip host 192.0.2.2 any log
+        - 30 permit ip host 192.0.2.3 any log
+        - 40 permit ip host 192.0.2.4 any log
+        parents: ip access-list test
+        before: no ip access-list test
+        replace: block
+
+
     - name: Add Telegraf Start at Reboot Event
       arista.eos.eos_config:
         commands: 
